--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,8 @@ a.btn.btn-sm{
 
 .preloader-blur{
     position: fixed;
+    top: 0;
+    left: 0;
     background: rgba(243, 243, 243, 0.4);
     width: 100%;
     height: 100%;
