fix fonts size and lot height

--- a/src/components/SearchFiltersNew/SearchFiltersNew.css
+++ b/src/components/SearchFiltersNew/SearchFiltersNew.css
@@ -3,6 +3,7 @@
     color: #FFFFFF;
     font-size: 16px;
     line-height: 26px;
+    letter-spacing: 1px;
 }
 .search-filter button[type="submit"] {
     background-color: #000000;
