--- a/src/components/Lot/Lot.css
+++ b/src/components/Lot/Lot.css
@@ -5,17 +5,34 @@
 .search-lot--content {
     background-color: #FFFFFF;
     font-family: 'Dosis', sans-serif;
+    height: 100%;
+}
+
+.lot-container > div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.lot-container > div > div:last-child {
+    height: 100%;
 }
 
 .title {
-    font-size: 26px;
-    line-height: 28px;
+    font-size: 1.625rem;
+    line-height: 1.2;
+    letter-spacing: 1px;
+    /*font-size: 26px;*/
+    /*line-height: 28px;*/
 }
 
 .subtitle {
     color: #968a8a;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 1.25rem;
+    line-height: 1.2;
+    letter-spacing: 1px;
+    /*font-size: 20px;*/
+    /*line-height: 28px;*/
 }
 
 .emptyPhoto {
