--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -6,12 +6,66 @@
     width: 100%;
 }
 
+@media screen and (max-width: 567px) {
+    .h-site-search--search .container {
+        padding: 0;
+    }
+}
+
+.h-site-search--form .h-form-control::placeholder {
+    color: #5555;
+}
+
 .h-site-search--searchbox {
     transition: transform .3s;
 }
 
 .h-site-search--form .h-form-control {
     margin-left: 0;
+}
+
+.ui.icon.input > input {
+    padding-right: 2.67142857em !important;
+}
+
+.ui.input {
+    font-size: 1em;
+    width: 100%;
+}
+
+.ui.input {
+    position: relative;
+    font-weight: normal;
+    font-style: normal;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    color: rgba(0, 0, 0, 0.87);
+}
+
+.ui.input > input {
+    margin: 0em;
+    max-width: 90%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    outline: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    text-align: left;
+    line-height: 1.21428571em;
+    font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    padding: 0.67857143em 1em;
+    background: #FFFFFF;
+    border: 0 solid rgba(34, 36, 38, 0.15); /* 1px work */
+    color: rgba(0, 0, 0, 0.87);
+    border-radius: 0;
+    /*border-radius: 0.28571429rem;*/
+    -webkit-transition: border-color 0.1s ease, -webkit-box-shadow 0.1s ease;
+    transition: border-color 0.1s ease, -webkit-box-shadow 0.1s ease;
+    transition: box-shadow 0.1s ease, border-color 0.1s ease;
+    transition: box-shadow 0.1s ease, border-color 0.1s ease, -webkit-box-shadow 0.1s ease;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 
 /*.h-site-search--form button[type="submit"] {  work*/
