updated img container color

--- a/src/components/Lot/Lot.css
+++ b/src/components/Lot/Lot.css
@@ -1,5 +1,6 @@
 .imgContainer {
-    background-color: #F3F3F3;
+    /*background-color: #F3F3F3;*/
+    background-color: #ffffff;
 }
 
 .search-lot--content {
