--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -1,7 +1,7 @@
-.favourite {
+#main_app_43tg4 .favourite {
     padding: 1rem;
 }
- 
-.favourite-content h3 {
+
+#main_app_43tg4 .favourite-content h3 {
     font-size: 1rem;
 }
